Aula2JS - Variáveis e Declarações.
Método console no script para JavaScript.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
 </head>
 
 <body>
-    <header>
-        <h1><span>Lorem</span></h1>
-        <nav>
+    <header class="menu">
+        <h1><span class="titulo">Lorem</span></h1>
+        <nav class="nav-bar">
             <ul>
-                <li><a href="">A</a></li>
-                <li><a href="">B</a></li>
-                <li><a href="">C</a></li>
-                <li><a href="">D</a></li>
+                <li><a href="">Lorem</a></li>
+                <li><a href="">Lorem</a></li>
+                <li><a href="">Lorem</a></li>
+                <li><a href="">Lorem</a></li>
             </ul>
         </nav>
 
     </header>
 </body>
-
 </html>
