--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="menu">
-        <h1><span class="titulo">Lorem</span></h1>
+        <h1><span class="titulo">SUSHI</span></h1>
         <nav class="nav-bar">
             <ul>
                 <li><a href="">Lorem</a></li>
@@ -19,7 +19,89 @@
                 <li><a href="">Lorem</a></li>
             </ul>
         </nav>
-
     </header>
+
+    <main>
+        <article class="principal">
+            <section class="secao_1">
+                <h1>LOREM</h1><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ab error nihil veritatis quis
+                    fugit corporis dolor. Distinctio ipsum natus omnis maxime amet magnam recusandae consequatur, magni
+                    vitae libero rem aliquam? Magni corrupti quaerat a nobis? Minus voluptatem hic aliquam in sapiente
+                    error distinctio explicabo alias nobis! Optio, quaerat ab?</p>
+                <br>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit blanditiis laboriosam dolorum
+                    recusandae amet beatae dolore, repudiandae commodi perspiciatis, rerum veniam sit aut dignissimos
+                    quasi similique modi animi libero? Voluptatum, fugit! Ex iusto rem in unde perspiciatis magnam
+                    repudiandae totam, id necessitatibus quidem obcaecati porro fuga dolor molestiae? Adipisci molestiae
+                    consequatur eos dolores itaque deserunt quasi explicabo doloremque accusantium recusandae.</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, molestias eveniet non aspernatur
+                    corrupti rem tempora similique voluptas quidem aperiam! </p>
+            </section>
+            <section class="secao_2">
+                <img class="img" src="img/imagem2.png" height="500px">
+            </section>
+        </article>
+        <section class="categorias">
+            <div id="card" class="card1"> <img src="svgs/node-16-svgrepo-com.svg" alt="">
+                <h2>JavaScript</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, laborum.</p>
+            </div>
+            <div id="card" class="card2"><img src="svgs/css-16-svgrepo-com.svg" alt="">
+                <h2>CSS 3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, laborum.</p>
+            </div>
+            <div id="card" class="card3"><img src="svgs/html-16-svgrepo-com.svg" alt="">
+                <h2>HTML 5</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, laborum.</p>
+            </div>
+        </section>
+        <section class="imagens_1">
+            <div class="textos">
+                <h3>Lorem</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, inventore neque. Nisi beatae
+                    officia dolorum perspiciatis voluptates deserunt laborum labore molestiae atque accusantium minima
+                    minus distinctio nemo eum maiores, fugit odio reprehenderit repellendus alias veniam harum?
+                    Excepturi blanditiis suscipit earum beatae animi, amet itaque culpa dolor mollitia! Maiores,
+                    corporis dolorum.</p><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime officiis atque illum dicta
+                    perferendis sed a vitae quam magnam recusandae!</p>
+            </div>
+            <img class="oceano" src="img/oceano.jpg" alt="">
+        </section>
+
+        <section class="imagens_2">
+            <div class="textos_2"><h3>Lorem</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, inventore neque. Nisi beatae
+                    officia dolorum perspiciatis voluptates deserunt laborum labore molestiae atque accusantium minima
+                    minus distinctio nemo eum maiores, fugit odio reprehenderit repellendus alias veniam harum?
+                    Excepturi blanditiis suscipit earum beatae animi, amet itaque culpa dolor mollitia! Maiores,
+                    corporis dolorum.</p><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime officiis atque illum dicta
+                    perferendis sed a vitae quam magnam recusandae!</p>
+            </div>
+                
+            <img src="img/mesa_de_jogos.jpg" alt="" class="jogo">
+        </section>
+
+        <section class="imagens_3">
+            <div class="textos">
+                <h3>Lorem</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, inventore neque. Nisi beatae
+                    officia dolorum perspiciatis voluptates deserunt laborum labore molestiae atque accusantium minima
+                    minus distinctio nemo eum maiores, fugit odio reprehenderit repellendus alias veniam harum?
+                    Excepturi blanditiis suscipit earum beatae animi, amet itaque culpa dolor mollitia! Maiores,
+                    corporis dolorum.</p><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime officiis atque illum dicta
+                    perferendis sed a vitae quam magnam recusandae!</p>
+            </div>
+            <img src="img/neve.jpg" alt="" class="neve">
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
