Adicionamento do Js ao Site Web.

--- a/jucao/index.html
+++ b/jucao/index.html
@@ -71,22 +71,9 @@
             <img class="oceano" src="img/oceano.jpg" alt="">
         </section>
 
-        <section class="imagens_2">
-            <div class="textos_2"><h3>Lorem</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, inventore neque. Nisi beatae
-                    officia dolorum perspiciatis voluptates deserunt laborum labore molestiae atque accusantium minima
-                    minus distinctio nemo eum maiores, fugit odio reprehenderit repellendus alias veniam harum?
-                    Excepturi blanditiis suscipit earum beatae animi, amet itaque culpa dolor mollitia! Maiores,
-                    corporis dolorum.</p><br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime officiis atque illum dicta
-                    perferendis sed a vitae quam magnam recusandae!</p>
-            </div>
-                
-            <img src="img/mesa_de_jogos.jpg" alt="" class="jogo">
-        </section>
-
         <section class="imagens_3">
-            <div class="textos">
+            <img src="img/neve.jpg" alt="" class="neve">
+            <div class="textos_dois">
                 <h3>Lorem</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, inventore neque. Nisi beatae
                     officia dolorum perspiciatis voluptates deserunt laborum labore molestiae atque accusantium minima
@@ -96,7 +83,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime officiis atque illum dicta
                     perferendis sed a vitae quam magnam recusandae!</p>
             </div>
-            <img src="img/neve.jpg" alt="" class="neve">
+            
         </section>
     </main>
     <footer>
