Projeto Pré-Final

--- a/jucao/index.html
+++ b/jucao/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-
+    <button class="button"><img id="btn" src="svgs/danger-svgrepo-com.svg" alt=""></button>
     <main>
         <article class="principal">
             <section class="secao_1">
@@ -83,12 +83,26 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime officiis atque illum dicta
                     perferendis sed a vitae quam magnam recusandae!</p>
             </div>
-            
+
         </section>
     </main>
-    <footer>
-
+    <footer class="rodape">
+        <h1><span class="titulo_dois">SUSHI</span></h1>
+        <section class="links_rodape">
+            <ul class="descricao">
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+            <ul class="descricao">
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+        </section>
     </footer>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
