--- a/jucao/index.html
+++ b/jucao/index.html
@@ -86,7 +86,7 @@
         </section>
 
         <section class="literatura">
-            <h1 class="final-flash">AMOSTRADINHO</h1>
+            <h1 class="final-flash">DESCRIÇÃO PARA TEXTO</h1>
             <input type="text" name="algo" id="textoss" placeholder="Insira algo">
             <input type="submit" id="send" value="Salvar">
             <p id="texto-frente"></p>
@@ -107,7 +107,6 @@
             </ul>
         </section>
     </footer>
-
     <script src="index.js"></script>
 </body>
 
